# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.608 2006/03/02 21:37:58 agaffney Exp $

  2 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  proper return code checking for ext2/3 resizing

  28 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  accept 'none' as well as 'null' for network type
  src/GLIArchitectureTemplate.py:
  ignore extended partitions in mount_local_partitions()
  src/templates/x86ArchitectureTemplate.py:
  use get_ordered_partition_list() instead of keys().sort() for new_part_list
  check to make sure start sector for primary isn't less than end sector for
  previous extended
  src/GLIClientController.py:
  write dns servers to /etc/resolv.conf

  27 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  copy_pkg_to_chroot() uses compile_output.log for command output

  23 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  only keep a 1000 line 'scrollback' buffer for the compile output and log file

  20 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  add code make GLIPortage.py capable of being run stand-along for dynamic
  stage3 generation and copying packages in a GRP-ish way
  grp code fixups

  17 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  ignore blank packages passed to get_deps() and emerge()

  14 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  add get_chosts() function

*GLI-0.3 (12 Feb 2006)

  12 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  pull old start/end sector values from somewhere that actually has them
  add logic for extended partition to code that makes sure new end sector
  doesn't overlap start sector of next partitions
  don't freak out if partition can't be deleted

  11 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>