@@ -1,7 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.608 2006/03/02 21:37:58 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.609 2006/03/04 00:01:55 agaffney Exp $
+
+  3 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIClientController.py:
+  slightly better error handling for pre-install failures
 
   2 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
